# insurance-claims-fraud-graph

./: .gitignore  README.md  pyproject.toml
apps/web/: package-lock.json  package.json
apps/web/src/app/: ChatWidget.tsx  PatternsPanel.tsx  page.tsx
apps/web/src/app/cases/: page.tsx
apps/web/src/app/chat/: page.tsx
apps/web/src/app/claim/[claimId]/: CasePanel.tsx  ClaimChatWidget.tsx  ClaimClient.tsx  DocumentPanel.tsx  GraphView.tsx  InvestigatorBriefing.tsx  MLScore.tsx  RiskScore.tsx  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/lib/: api.ts  auth.ts
data/raw/: addresses.csv  adjusters.csv  bank_accounts.csv  claims.csv  law_firms.csv  policies.csv  policyholders.csv  providers.csv  repair_shops.csv  vehicles.csv
scripts/: generate_data.py  load_neo4j.py  train_gnn.py  train_model.py
services/api/: pyproject.toml
services/api/app/: main.py
services/api/app/core/: auth.py  config.py
services/api/app/db/: neo4j.py
services/api/app/ml/: features.json  fraud_model.json  gnn_meta.json  gnn_model.pt
services/api/app/routes/: auth.py  cases.py  chat.py  claims.py  documents.py  gnn.py  graph.py  ml.py  patterns.py  scoring.py  summary.py
services/api/app/services/: audit_service.py  auth_service.py  cases.py  chat_agent.py  chat_db.py  claims.py  document_agent.py  document_store.py  gnn_scoring.py  graph.py  ml_scoring.py  patterns.py  scoring.py  summarization.py  users_service.py
src/data_gen/: fraud_injection.py  generator.py
src/graph/: neo4j_loader.py
src/graph/cypher/: 00_constraints.cypher  01_load_addresses.cypher  02_load_policyholders.cypher  03_load_policies.cypher  04_load_entities.cypher  05_load_claims.cypher  10_investigation.cypher
